test/expected/cli/glob_failglob_modes.out
== a matching glob expands to the sorted names:
real_one real_two
== the default mood aborts on no match:
shit: 1:6: error: The glob pattern 'no_match_*' matched no file, it expands to its literal text, which is rarely intended.
     1 |  echo no_match_*
       |       ^~~~~~~~~~ here.
note: Probe for matches with compgen -G 'no_match_*' or relax with set +o failglob.
rc=1
== the bash mood leaves it literal:
no_match_*
== the sh mood leaves it literal:
no_match_*
